...
            "state" : "translated",
            "value" : "人口（人/約 1km 方格）"
          }
        }
      }
    },
    "Close population legend" : {
      "localizations" : {
        "zh-Hant" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "關閉人口圖例"
          }
...
            "state" : "translated",
            "value" : "選擇要操作的列車。"
          }
        }
      }
    },
    "Clear" : {
      "localizations" : {
        "zh-Hant" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "清除"
          }
...
            "state" : "translated",
            "value" : "停站模式仍停靠清單中相同位置的站。等候路線不再提供之行程的乘客會離開。"
          }
        }
      }
    },
    "Pause" : {
      "localizations" : {
        "zh-Hant" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "暫停"
          }
...
            "state" : "translated",
            "value" : "報表"
          }
        }
      }
    },
    "Resume" : {
      "localizations" : {
        "zh-Hant" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "繼續"
          }
...
            "state" : "translated",
            "value" : "土地分區"
          }
        }
      }
    },
    "Zoom in" : {
      "localizations" : {
        "zh-Hant" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "放大"
          }
        }
      }
    },
    "Zoom out" : {
      "localizations" : {
        "zh-Hant" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "縮小"
          }
...
